🐛 resolve <code /> text legibility (#30)

--- a/src/styles/components/_codeSnippet.scss
+++ b/src/styles/components/_codeSnippet.scss
@@ -20,7 +20,7 @@
     }
   }
 
-  code[class*='language'] {
+  code[class^='language'] {
     padding-right: 30px !important;
     float: left;
 
